@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }



' --- 飞机相关类 ---

class HeroAircraft <<Singleton>> {
    - {static} instance: HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance(int locationX, int locationY, int speedX, int speedY, int hp): HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class ExcellentEnemy {
    + ExcellentEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class BossEnemy {
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

class AceEnemy {
    + AceEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
}

AbstractAircraft <|-- MobEnemy
MobEnemy <|-- ExcellentEnemy
MobEnemy <|-- EliteEnemy
MobEnemy <|-- BossEnemy
MobEnemy <|-- AceEnemy

' --- 子弹相关类 ---

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

class HeroBullet
class EnemyBullet

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet




abstract class AbstractProp {
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
}

' AbstractProp 继承自飞行对象
AbstractFlyingObject <|-- AbstractProp


class BombProp {
    + active(HeroAircraft hero):void
}

class FireProp {
    + active(HeroAircraft hero):void
}

class HpProp {
    + active(HeroAircraft hero):void
}

class SuperFireProp {
    + active(HeroAircraft hero):void
}

AbstractProp <|-- BombProp
AbstractProp <|-- FireProp
AbstractProp <|-- HpProp
AbstractProp <|-- SuperFireProp




' --- 整体结构 ---
AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet

@enduml